@@ -22,7 +22,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * An abstract class for representing various types of allocation decisions.
@@ -119,7 +118,7 @@ public abstract class AbstractAllocationDecision implements ToXContentFragment, 
      * Sorts a list of node level decisions by the decision type, then by weight ranking, and finally by node id.
      */
     public List<NodeAllocationResult> sortNodeDecisions(List<NodeAllocationResult> nodeDecisions) {
-        return Collections.unmodifiableList(nodeDecisions.stream().sorted().collect(Collectors.toList()));
+        return nodeDecisions.stream().sorted().toList();
     }
 
     /**
