@@ -60,7 +60,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLContext;
 
@@ -549,7 +548,7 @@ public class HttpExporter extends Exporter {
             .getSecureSettingsInUse(settings)
             .stream()
             .map(Setting::getKey)
-            .collect(Collectors.toList());
+            .toList();
         if (secureSettings.isEmpty() == false) {
             throw new IllegalStateException(
                 "Cannot dynamically update SSL settings for the exporter ["
